# rust_axum

./: .env-development  Cargo.toml  LICENSE  Makefile  README.md  mprocs.yaml
dev-tools/pg/: Makefile  README.md  package.json  pnpm-lock.yaml
eventsourced_core/: Cargo.toml
eventsourced_core/src/: lib.rs
load-test/: Makefile
load-test/tests/: first.js  script.js
migrations/: V1.0.0__Add_events_and_states.sql  V1.0.0__Create_greatings.sql
users/: Cargo.toml  Makefile
users/src/: command.rs  error.rs  event.rs  lib.rs
users_2/: Cargo.toml  Makefile
users_2/src/: aggregate.rs  command.rs  error.rs  event.rs  lib.rs  result.rs  state.rs  store.rs
users_2/src/tests/: mod.rs  store.rs
users_2/tests/: storage_test.rs
web-server/: Cargo.toml  Makefile
web-server/src/: error.rs  main.rs
