[workspace]
name = "runs_axum"
version = "0.0.0"
resolver = "2"
members = ["web-server"]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
# tracing-subscriber = "0.3.19"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
