[workspace]
name = "runs_axum"
version = "0.0.0"
resolver = "2"
members = ["eventsourced_core", "users", "users_2", "web-server"]

[workspace.dependencies]
eventsourced_core = { path = "eventsourced_core" }
futures-util = "0.3.31"
futures-core = "0.3.31"
futures = "0.3.31"
chrono = "0.4.41"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
# tracing-subscriber = "0.3.19"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tokio-postgres = { version = "0.7", features = [
  "with-uuid-0_8",
  "with-serde_json-1",
] }
deadpool-postgres = "0.10"
derive_more = { version = "1.0.0", features = ["from", "display"] }
pgmt = { git = "http://github.com/agirorn/pgmt.git", rev = "36e7aff1406cd5e5c01bce49e06e3b9b173fedb1" }
pgmt_cli = { git = "http://github.com/agirorn/pgmt.git", rev = "36e7aff1406cd5e5c01bce49e06e3b9b173fedb1" }
pgmt_core = { git = "http://github.com/agirorn/pgmt.git", rev = "36e7aff1406cd5e5c01bce49e06e3b9b173fedb1" }
pgmt_macros = { git = "http://github.com/agirorn/pgmt.git", rev = "36e7aff1406cd5e5c01bce49e06e3b9b173fedb1" }
async-trait = "0.1.88"
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
bcrypt = "0.17.1"
