[package]
name = "users_2"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
pgmt = { workspace = true }
eventsourced_core = { workspace = true }
pgmt_core = { workspace = true }
deadpool-postgres = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
pretty_assertions = { workspace = true }
tokio-postgres = { workspace = true }
