[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
derive_more = { workspace = true }
